plugins {
    id 'java'
    id 'application'
}

group = 'dev.kastrick'
version = '0.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_22
    targetCompatibility = JavaVersion.VERSION_22
}

application {
    mainClass = 'dev.kastrick.minesport.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    // JSON parsing for block model/blockstate files
    implementation 'com.google.code.gson:gson:2.11.0'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    // Unit tests must never inherit the user's real Minesport GUI settings from
    // %APPDATA%/~/.config. Dedicated FLATTER tests explicitly enable it when
    // exercising exporter integration.
    systemProperty 'minesport.flatter', 'false'
    // Cell size is user-configurable too. Pin the balanced default so a local
    // 8/32/64 setting cannot make exporter regression tests machine-dependent.
    systemProperty 'minesport.flatterCellSize', '16'
}

jar {
    manifest {
        attributes 'Main-Class': 'dev.kastrick.minesport.Main'
    }
    // Fat jar - include all deps
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
